<resources>
	<string name="app_name">Exercise1</string>
	<string name="action_settings">Settings</string>
	<string name="nameFirstTextBox">First Name</string>
	<string name="nameLastTextBox">Last Name</string>
	<string name="ageTextBox">Age</string>
	<string name="femaleButtonText">Female</string>
	<string name="maleButtonText">Male</string>
	<string name="imageCaption">Android Image</string>
	<string name="submitButton">Submit</string>
	<string name="dateBox">date</string>
</resources>
