<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="exercise1.mad.com.exercise1.MainActivity"
	tools:showIn="@layout/activity_main"
	tools:layout_editor_absoluteY="81dp"
	tools:layout_editor_absoluteX="0dp">

	<EditText
		android:id="@+id/ageText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:ems="10"
		android:inputType="textPersonName|number"
		android:selectAllOnFocus="true"
		android:hint="@string/ageTextBox"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintLeft_toLeftOf="@+id/nameLastText"
		app:layout_constraintRight_toRightOf="@+id/nameLastText"
		app:layout_constraintTop_toBottomOf="@+id/nameLastText"
		tools:layout_constraintLeft_creator="1"
		tools:layout_constraintRight_creator="1"
		tools:layout_constraintTop_creator="1"/>

	<EditText
		android:id="@+id/nameLastText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:ems="10"
		android:inputType="textPersonName"
		android:selectAllOnFocus="true"
		android:hint="@string/nameLastTextBox"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintLeft_toLeftOf="@+id/nameFirstText"
		app:layout_constraintRight_toRightOf="@+id/nameFirstText"
		app:layout_constraintTop_toBottomOf="@+id/nameFirstText"
		tools:layout_constraintLeft_creator="1"
		tools:layout_constraintRight_creator="1"
		tools:layout_constraintTop_creator="1"/>

	<EditText
		android:id="@+id/nameFirstText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="30dp"
		android:layout_marginStart="30dp"
		android:layout_marginTop="16dp"
		android:ems="10"
		android:hint="@string/nameFirstTextBox"
		android:inputType="textCapWords|textPersonName"
		android:selectAllOnFocus="true"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_constraintLeft_creator="1"
		tools:layout_constraintTop_creator="1"/>

	<RadioGroup
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		tools:layout_constraintTop_creator="1"
		tools:layout_constraintLeft_creator="1"
		android:id="@+id/radioGroup"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/ageText"
		app:layout_constraintVertical_bias="0.355"
		android:layout_marginLeft="8dp"
		android:layout_marginEnd="303dp"
		android:layout_marginRight="303dp"
		android:layout_marginStart="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintHorizontal_bias="1.0">

		<RadioButton
			android:id="@+id/maleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:duplicateParentState="false"
			android:text="@string/maleButtonText"
			tools:layout_editor_absoluteX="-295dp"
			tools:layout_editor_absoluteY="41dp"/>

		<RadioButton
			android:id="@+id/femaleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:duplicateParentState="false"
			android:text="@string/femaleButtonText"
			tools:layout_editor_absoluteX="-279dp"
			tools:layout_editor_absoluteY="21dp"/>
	</RadioGroup>

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="142dp"
		android:layout_height="125dp"
		android:layout_marginRight="4dp"
		android:layout_marginTop="28dp"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginEnd="8dp"
		android:contentDescription="@string/imageCaption"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@mipmap/ic_launcher"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="8dp"
		app:layout_constraintVertical_bias="0.015"
		app:layout_constraintLeft_toRightOf="@+id/nameLastText"
		app:layout_constraintHorizontal_bias="1.0"/>

	<Button
		android:id="@+id/submitButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="29dp"
		android:text="@string/submitButton"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/radioGroup"
		app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>
